# AliceO2

./: .gitignore
.github/workflows/: code-transformations.yml  datamodel-doc.yml  doxygen.yml  release.yml  reports.yml  stale.yml
CCDB/include/CCDB/: CCDBDownloader.h  CcdbApi.h
CCDB/src/: CcdbApi.cxx
CCDB/test/: testCcdbApi.cxx
Common/ML/src/: OrtInterface.cxx
Common/SimConfig/src/: SimConfig.cxx
Common/Utils/: CMakeLists.txt
Common/Utils/test/: testEnumFlags.cxx
DataFormats/Detectors/TPC/: CMakeLists.txt
DataFormats/Detectors/Upgrades/: CMakeLists.txt
DataFormats/Headers/test/: testDataHeader.cxx
DataFormats/MemoryResources/test/: testMemoryResources.cxx
DataFormats/Parameters/src/: AggregatedRunInfo.cxx  GRPTool.cxx
Detectors/AOD/src/: AODMcProducerHelpers.cxx  AODProducerWorkflowSpec.cxx
Detectors/Base/src/: MatLayerCylSet.cxx
Detectors/Filtering/src/: FilteringSpec.cxx
Detectors/GlobalTracking/src/: MatchTPCITS.cxx
Detectors/Passive/src/: Cave.cxx
Detectors/TPC/calibration/: CMakeLists.txt
EventVisualisation/Base/src/: DirectoryLoader.cxx
EventVisualisation/DataConverter/src/: VisualisationEventROOTSerializer.cxx
Framework/AODMerger/src/: aodThinner.cxx
Framework/AnalysisSupport/: CMakeLists.txt
Framework/AnalysisSupport/src/: AODJAlienReaderHelpers.cxx  AODReaderHelpers.cxx  AODReaderHelpers.h  AODWriterHelpers.cxx  DataInputDirector.cxx  OnDemandPlugin.cxx  Plugin.cxx
Framework/CCDBSupport/: CMakeLists.txt
Framework/CCDBSupport/src/: AnalysisCCDBHelpers.cxx  CCDBFetcherHelper.cxx  CCDBFetcherHelper.h  CCDBHelpers.cxx  Plugin.cxx
Framework/CCDBSupport/test/: test_CCDBHelpers.cxx
Framework/Core/: CMakeLists.txt
Framework/Core/src/: AODReaderHelpers.cxx  ASoA.cxx  AnalysisHelpers.cxx  AnalysisSupportHelpers.cxx  ArrowSupport.cxx  ArrowTableSlicingCache.cxx  CallbacksPolicy.cxx  CommonDataProcessors.cxx  CommonServices.cxx  ComputingQuotaEvaluator.cxx  DPLWebSocket.cxx  DataAllocator.cxx  DataProcessingDevice.cxx  DataProcessor.cxx  DataRelayer.cxx  ExpressionJSONHelpers.cxx  Expressions.cxx  ExternalFairMQDeviceProxy.cxx  FragmentToBatch.cxx  HTTPParser.cxx  HTTPParser.h  HistogramRegistry.cxx  IndexBuilderHelpers.cxx  IndexJSONHelpers.cxx  IndexJSONHelpers.h  LifetimeHelpers.cxx  O2ControlHelpers.cxx  ResourcePolicy.cxx  ResourcePolicyHelpers.cxx  TableBuilder.cxx  TableTreeHelpers.cxx  WSDriverClient.cxx  WorkflowHelpers.cxx  runDataProcessing.cxx
Framework/Core/test/: test_AllCrashTypes.sh  test_AnalysisTask.cxx  test_ComputingQuotaEvaluator.cxx  test_Concepts.cxx  test_DataAllocator.cxx  test_DataRelayer.cxx  test_Expressions.cxx  test_FairMQ.cxx  test_FrameworkDataFlowToO2Control.cxx  test_HTTPParser.cxx  test_IndexBuilder.cxx  test_InfoLogger.cxx  test_MessageSet.cxx  test_Parallel.cxx  test_RegionInfoCallbackService.cxx  test_Services.cxx  test_TableSpawner.cxx  test_TimePipeline.cxx
Framework/GUISupport/src/: FrameworkGUIDeviceInspector.cxx
Framework/TestWorkflows/: CMakeLists.txt
Framework/TestWorkflows/src/: o2TestAnalysisCCDB.cxx  o2TestHistograms.cxx
GPU/Common/: CMakeLists.txt  GPUCommonArray.h  GPUCommonDefAPI.h  GPUCommonLogger.h  GPUCommonMath.h
GPU/GPUTracking/: CMakeLists.txt  GPUTrackingLinkDef_O2_DataTypes.h  kernels.cmake
GPU/GPUTracking/Base/: GPUConstantMem.h  GPUReconstruction.cxx  GPUReconstruction.h  GPUReconstructionCPU.cxx  GPUReconstructionCPU.h  GPUReconstructionKernelMacros.h  GPUReconstructionProcessing.h
GPU/GPUTracking/Base/opencl/: CMakeLists.txt  GPUReconstructionOCLKernels.cxx  GPUReconstructionOCLKernelsSpecialize.inc
GPU/GPUTracking/DataCompression/: GPUTPCClusterRejection.h  GPUTPCCompression.cxx  GPUTPCCompression.h  GPUTPCCompressionKernels.cxx  GPUTPCCompressionKernels.h
GPU/GPUTracking/DataTypes/: GPUDataTypes.h  GPUO2ConfigurableParam.cxx  GPUO2ConfigurableParam.h  GPUTPCGMMergedTrackHit.h  ORTRootSerializer.cxx  ORTRootSerializer.h
GPU/GPUTracking/Definitions/: GPUDef.h  GPUDefConstantsAndSettings.h  GPUDefMacros.h  GPUDefParametersConstants.h  GPUDefParametersDefault.h  GPUDefParametersDefaults.h  GPUDefParametersLoad.template.inc  GPUDefParametersRuntime.template.h  GPUDefParametersWrapper.h  GPUGetConstexpr.h  GPUSettingsList.h
GPU/GPUTracking/Global/: GPUChainITS.cxx  GPUChainITS.h  GPUChainTracking.cxx  GPUChainTracking.h  GPUChainTrackingClusterizer.cxx  GPUChainTrackingDebugAndProfiling.cxx  GPUChainTrackingIO.cxx  GPUChainTrackingMerger.cxx  GPUChainTrackingSectorTracker.cxx  GPUErrorCodes.h
GPU/GPUTracking/Interface/: CMakeLists.txt
GPU/GPUTracking/Merger/: GPUTPCGMMergedTrack.h  GPUTPCGMMerger.cxx  GPUTPCGMMerger.h  GPUTPCGMO2Output.cxx  GPUTPCGMPropagator.cxx  GPUTPCGMPropagator.h  GPUTPCGMSectorTrack.cxx  GPUTPCGMSectorTrack.h  GPUTPCGMTrackParam.cxx  GPUTPCGMTrackParam.h  GPUTPCGlobalDebugSortKernels.cxx
GPU/GPUTracking/Refit/: GPUTrackingRefit.cxx
GPU/GPUTracking/SectorTracker/: GPUTPCClusterData.h  GPUTPCNeighboursFinder.cxx  GPUTPCNeighboursFinder.h  GPUTPCTrackletSelector.h
GPU/GPUTracking/Standalone/: CMakeLists.txt
GPU/GPUTracking/TPCClusterFinder/: CfConsts.h  GPUTPCCFDecodeZS.cxx  GPUTPCCFDecodeZS.h  GPUTPCCFNoiseSuppression.h  GPUTPCCFStreamCompaction.h  GPUTPCNNClusterizer.cxx  GPUTPCNNClusterizer.h  GPUTPCNNClusterizerHost.cxx  GPUTPCNNClusterizerHost.h  (+2 more)
GPU/TPCFastTransformation/: CMakeLists.txt  TPCFastTransform.h
GPU/Utils/: CMakeLists.txt
GPU/Workflow/: CMakeLists.txt
GPU/documentation/: README.md  tpc-tracking-qa.md
Generators/src/: GeneratorFactory.cxx  GeneratorHybrid.cxx
Steer/src/: CollisionContextTool.cxx  O2MCApplication.cxx
cmake/: AddRootDictionary.cmake  O2AddExecutable.cmake  O2AddWorkflow.cmake  O2TargetRootDictionary.cmake  rootcling_wrapper.sh.in
dependencies/: FindO2GPU.cmake
doc/data/: 2021-01-o2_prs.json
macro/: CMakeLists.txt  build_geometry.C  convert_onnx_to_root_serialized.C
prodtests/: full_system_test.sh
prodtests/full-system-test/: calib-workflow.sh  dpl-workflow.sh  start_tmux.sh
run/: CMakeLists.txt  O2HitMerger.h  o2simdefaultdetectorlist.json
(+240 files in other folders)
